<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">榜样</string>
    <string name="cache_app_name">BangYang</string> <!-- 缓存路径,需随应用名改变而改变 -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!--  -->
    <string name="tel_str">content://telephony/carriers/preferapn</string>

    <!-- ui -->
    <string name="online">在线</string>
    <string name="outline">离线</string>

    <!-- crop -->
    <string name="runningFaceDetection">请稍后 &#8230;</string>
    
    <string name="menu_username">请登录</string>
    <string name="menu_user_elucidation">这家伙很懒,什么都没写&#8230;</string>
    <string name="menu_home">榜样精选</string>
    <string name="menu_classification">查看分类</string>
    <string name="menu_hot">最新最热</string>
    <string name="menu_question">疑问答疑</string>
    <string name="menu_myApp">我的应用</string>
    <string name="menu_comment">我的评论</string>
    <string name="menu_collection">我的收藏</string>
    <string name="menu_search">应用搜索&#8230;</string>
    <string name="menu_setting">设置</string>
    
    <!-- 设置 -->
    <string name="setting_friends">推荐给好友</string>
    <string name="setting_score">去评分</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_version">升级最新版本</string>
    <string name="setting_clear">清空缓存</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_new">已是最新版本</string>
    
    <!-- personal -->
	<string name="nick">昵称</string>
	<string name="signature">签名</string>
	<string name="default_nick">用户名称</string>
	<string name="default_sign">“这家伙很懒~~什么都没写！”</string>
	<string name="photo">拍一张照片</string>
	<string name="album">从相册选图片</string>
	<string name="cancle">取消</string>
	<string name="change_portrait">修改头像</string>
	
	<!-- 应用分享 -->
	<string name="click">点击上传应用</string>
	<string name="app_hint">给我说点什么吧&#8230;</string>
	<string name="app_limit">还可以输入120字</string>
	<string name="app_left">取消</string>
	<string name="app_right">完成</string>
	
	<!-- app详情页 -->
	<string name="details_name">应用名称</string>
	<string name="details_description">应用简介</string>
	<string name="details_game">游戏</string>
	<string name="details_comments">网友评论</string>
	<string name="details_comments_name">Mr艾多</string>
	<string name="details_comments_time">03/17 12:30</string>
	<string name="details_des">这是一款为球迷打造的贴纸相机app，这里有着为球迷们设计的最精美、最应景的贴纸，为您实时提供对阵、比分、时间、场馆等信息的呦。1、 实时数据贴纸：对阵、比分、时间、场馆等信息通通有，一图胜千言；2、 覆盖球队广：WeShot 目前涵盖了欧洲五大联赛、中超、NBA、CBA 共计 164 支球队；3、 最懂你的贴纸：为你们设计最精美、最应景的贴纸；</string>
	<string name="reply_more">展开更多</string>
	
	<string name="my_share">我的分享</string>
	<string name="my_question">我的疑问</string>
	<string name="apps">应用</string>
	<string name="question">疑问</string>
	
	<!-- common -->
	<string name="local_app">本地应用</string>
	<string name="default_input">我也说两句&#8230;</string>
	<string name="default_feedback_word">请在这里填写您的意见或建议~建议留下常用邮箱，便于我们及时回复您&#8230;</string>
	<string name="default_feedback_numlimit">还可以输入120字</string>
	<string name="default_search_input">输入应用名称</string>
	<string name="default_zan_num">0人赞过</string>
	<string name="default_error_msg">数据请求失败，点击重试</string>
	<string name="reply">回复</string>
	
	<!-- 推送 -->
	<string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>
	
	
</resources>