<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff" >

    <TextView 
        android:id="@+id/quit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/setting_item_selector"
        android:text="@string/cancle"
        android:gravity="center"
        android:textColor="#ffffff"/>
    <TextView 
        android:id="@+id/photo_album"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/quit"
        android:background="@drawable/setting_item_selector"
        android:text="@string/album"
        android:gravity="center"
        android:textColor="#ffffff"/>
    <TextView 
        android:id="@+id/photo_camera"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:layout_marginBottom="1dp"
        android:layout_above="@id/photo_album"
        android:background="@drawable/setting_item_selector"
        android:text="@string/photo"
        android:gravity="center"
        android:textColor="#ffffff"/>
    
    <View 
        android:id="@+id/v_other"
        android:layout_above="@id/photo_camera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
</RelativeLayout>
