<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <!-- android:background="@android:color/transparent" -->

    <LinearLayout
        android:id="@+id/menu_head"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:background="@drawable/menu_item_selector">

        <ImageView
            android:id="@+id/menu_head_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/usericon_background"
            android:contentDescription="@null"
            android:padding="2.5dp"
            android:src="@drawable/head_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/menu_username"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/menu_username"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/menu_user_elucidation"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginTop="8dp"
                android:text="@string/menu_user_elucidation"
                android:textColor="#7fffffff"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/menu_parting_line"
        android:layout_below="@id/menu_head"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#33ffffff" />

    <LinearLayout
        android:id="@+id/menu_home"
        android:layout_below="@id/menu_parting_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" 
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_home"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_classification"
        android:layout_below="@id/menu_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/fenlei" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_classification"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_hot"
        android:layout_below="@id/menu_classification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/hot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_hot"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_question"
        android:layout_below="@id/menu_hot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/question" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_question"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_myApp"
        android:layout_below="@id/menu_question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/my" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_myApp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_comment"
        android:layout_below="@id/menu_myApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_comment"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_collection"
        android:layout_below="@id/menu_comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_item_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/collect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:text="@string/menu_collection"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/menu_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="25dp" >

        <LinearLayout
            android:id="@+id/menu_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/menu_item_selector"
            android:padding="5dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/menu_search"
                android:textColor="#7fffffff"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true" 
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:background="@drawable/menu_item_selector">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/menu_setting"
                android:textColor="#7fffffff"
                android:textSize="13sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>