<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/first_comment_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/first_rl"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp" >

            <ImageView
                android:id="@+id/first_iv_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/head_default"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/first_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/first_iv_icon"
                android:text="@string/details_comments_name"
                android:textColor="#999999"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/first_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/first_tv_name"
                android:text="@string/details_comments_time"
                android:textColor="#bbbbbb"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/first_tv_like_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="0"
                android:textColor="#bbbbbb"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/first_iv_like"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/first_tv_like_num"
                android:background="@drawable/zan_btn_selector"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:id="@+id/first_tv_comments_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_rl"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/details_des"
            android:textColor="#444444"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/first_iv_divider_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_tv_comments_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sf_line"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/first_item_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/first_tv_comments_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="#e6e6e6"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_comment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_comment_item" >

        <RelativeLayout
            android:id="@+id/comment_item_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp" >

            <ImageView
                android:id="@+id/comment_item_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/head_default"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/comment_item_icon" >

                <TextView
                    android:id="@+id/comment_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#999999"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/comment_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/comment_item_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/comment_item_name"
                    android:textColor="#999999"
                    android:textSize="11sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/comment_item_zan_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textColor="#999999"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/comment_item_zan"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/comment_item_zan_num"
                android:background="@drawable/zan_btn_selector"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:id="@+id/comment_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_item_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:textColor="#444444"
            android:textSize="15sp" />

        <View
            android:id="@+id/comment_item_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/comment_item_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#e6e6e6" />
    </RelativeLayout>

</RelativeLayout>